Fixing LMEs re Jerome comments

--- a/Script/06_Extrapolation_forSpinUP.Rmd
+++ b/Script/06_Extrapolation_forSpinUP.Rmd
@@ -20,19 +20,17 @@ The **METHOD** follows two steps:
 
 1. We extrapolated effort between 1850 and 1950 for each LME. We followed two paths depending on which data was available:   
 
-    a. If there were at least 10 years of catch data before 1950, **we used catch time series** to extrapolate effort backwards. We fit a GAM on the catch data and thus modeled catch as a spline-based smooth function of year, assuming a Gaussian distribution of data, a log link function, and a k argument of 6. The k argument sets the dimensionality of the smoothing matrix for the parameter year, with lower k resulting in smoother fitted spline. We used this model to predict catch backwards, between 1850 and 1950. We looked at observed and predicted values and corrected for unexpected patterns. This meant trimming the catch data, adjusting the k argument if needed, and re-fitting the GAM. Specifically, we identified the pick in the catch time series and excluded data collected afterwards. This was because we assumed the catch time series followed a sigmoid (Gaussian? Logistic?) function, with a smooth increase in catch until the pick is reached, and considering the ascendant part of the catch time series only resulted in a better statistical fit. We also excluded data collected during WWI and WWII (1914-1918 and 1939-1945) because these data showed lower values and lead to oscillations in the distribution of predicted catches. In addition, we lowered k if, for example, predicted catches showed oscillations. Last, we calculated the rate of change of the predicted catch between 1951 and 1850 relative to 1950, we applied this rate of change to the effort data to extend the fishing effort time series to 1850.    
+    a. If there were at least 10 years of catch data before 1950, **we used catch time series** to extrapolate effort backwards. We fit a GAM on the catch data and thus modeled catch as a spline-based smooth function of year, assuming a Gaussian distribution of data, a log link function, and a k argument of 6. The k argument sets the dimensionality of the smoothing matrix for the parameter year, with lower k resulting in smoother fitted spline. We used this model to predict catch backwards, between 1850 and 1950. We looked at observed and predicted values and corrected for unexpected patterns. This meant trimming the catch data, adjusting the k argument if needed, and re-fitting the GAM. Specifically, we identified the pick in the catch time series and excluded data collected afterwards. This was because we assumed the catch time series followed a sigmoid (Gaussian? Logistic?) function, with a smooth increase in catch until the pick is reached, and considering the ascendant part of the catch time series only resulted in a better statistical fit. In addition, we lowered k if, for example, predicted catches showed oscillations (overfitting) and/or finshing effort increased backwards. Last, we calculated the rate of change of the predicted catch between 1951 and 1850 relative to hte avarage values between 1945 and 1955, we applied this rate of change to the effort data to extend the fishing effort time series to 1850. When fitting the GAM, we considered data collected during WWI and WWII (1914-1918 and 1939-1945) to consider all possible data and capture fluctuations in catches and effort.
 
-    b. If there were not at least 10 years of catch data before 1950, we **used effort time series** from 1950 to 2010 to extrapolate effort backwards. Similar to the approach used when we considered catch time series, we fit a GAM to the effort data, modeled effort as a spline-based smooth function of year, and used this model to predict effort between 1850 and 1950. Assumptions, data adjustments and functions argument used in this process were the same as the one used to model the catch data.  
+    b. If there were not at least 10 years of catch data before 1950, **we used effort time series** from 1950 to 2017 to extrapolate effort backwards. Similar to the approach used when we considered catch time series, we fit a GAM to the effort data, modeled effort as a spline-based smooth function of year, and used this model to predict effort between 1850 and 1950. Assumptions, data adjustments and functions argument used in this process were the same as the one used to model the catch data.  
 
-    Removing war years meant that the effect of war on catches and effort is not captured in our reconstruction. While this might be a limitation, the aim of the spin-up is to help models reach equilibrium before the 1950 rather than to capture complex dynamics. The reconstruction method described above is broadly consistent with the method Rousseau et al. (2019; in prep) used to reconstruct effort between 1950 and 2017.  
-
-2. Once we obtained an effort time series extending from 1850 to 2010 for each LME, we used the contribution of effort by EEZ, fishing country, gear, functional group, and sector in 1950 to allocate effort across these groups.    
+2. Once we obtained an effort time series extending from 1850 to 2017 for each LME, we used the contribution of effort by EEZ, fishing country, gear, functional group, and sector between 1950 and 1960 to allocate effort across these groups.    
 
 **Input files:**.  
 
-effort_histsoc_1950_2017.csv from Yannick Rousseau. 
+effort_histsoc_1950_2017.csv (script 02 + 05) from Yannick Rousseau. 
 
-temp_data_from_FishingEffort_Rpj_07script_update.RData for catch data including both historical (before 1950) and recent (after 1950) data from Reg Watson.  
+catch_histsoc_1869_2017.csv (script 07) for catch data including both historical (before 1950) and recent (after 1950) data from Reg Watson.  
 
 **Functions:**.  
 
@@ -42,11 +40,11 @@ effort_spread().
 
 **OUTPUT:**.      
 
-1. **reconstructed_effort_for_spinup_totLME.pdf** shows (A) trends in catches, and (B) trend in effort for each LME. Predictions from the GAM model are shown as a fitted line on either catch or effort depending on the approach used (1 or 2 above). The shape of the dots refer to whether data was used in the prediction or not (e.g. data collected after the pick in catches or during war years was not considered when fitting the GAM).       
+1. **reconstructed_effort_for_spinup_totLME.pdf** shows (A) trends in catches, and (B) trend in effort for each LME. Predictions from the GAM model are shown as a fitted line on either catch or effort depending on the approach used (1 or 2 above). The shape of the dots refer to whether data was used in the prediction or not (i.e. data collected after the pick in catches).       
 
-2. **reconstructed_effort_for_spinup.pdf** shows trends in fishing effort by gear (taken as an effort grouping example) and hece the distribution of the constructed effort for spin-up (1850-1950) across these groups.  
+2. **reconstructed_effort_for_spinup.pdf** shows trends in fishing effort by gear (taken as an effort grouping example) and hence the distribution of the constructed effort for spin-up (1850-1950) across these groups.  
 
-3. **effort_histsoc_1850_2010.csv** final spin-up and effort forcing data. 1850-1950 spin-up (extrapolated), 1950-1961 transition, 1961-2010 simulation.     
+3. **effort_histsoc_1850_2017.csv** final spin-up and effort forcing data. 1850-1950 spin-up (extrapolated), 1950-1961 transition, 1962-2010 experiment, and 2011-2017 validation.     
 
 *COMMENTS:*.  
 
@@ -60,7 +58,7 @@ effort_spread().
 
 2. Yannick & Reg: There will be mismatches between effort and catch - eg. gears withing LMEs that have catch but no effort and vice versa. About 70% compatibility between the 2 datasets. Mismatches are due to the different ways the 2 datasets were built: Yannick starts from gear to reconstruct effort (e.g. 30 trawlers in fleet) while Reg does not have info on gear so assumes gear based on limited knowledge (e.g most tuna are caught by purse seine) -> effort by gear and fishing group might be different from catch by fishing group. Yannick did some matching when building the effort dataset, but he did not reach the 100% match. There is an effort to connect the two - e.g. use Yannic's effort to base the catch reconstruction and vice versa but no outcome yet. IMPORTANT TO KNOW: the more you aggregate the less mismatch you get - modelers to deal with this, no solution.  
 
-3. Yannick, TO DO: Calculate mean over e.g. 3 years before and 3 years after 1950 in terms of rate of change in catches, otherwise e.g. rate of change between 0.001 and 0.00001 is 100 but both values are close to 0 - this results in big bumps in effort when you apply the rate of change in catches to effort if effort is not closed to 0.  
+3. Yannick: Calculate mean over e.g. 3 years before and 3 years after 1950 in terms of rate of change in catches, otherwise e.g. rate of change between 0.001 and 0.00001 is 100 but both values are close to 0 - this results in big bumps in effort when you apply the rate of change in catches to effort if effort is not closed to 0.  
 
 4. Yannick, DONE DIFFERENTLY: Remove from catches war years (1914-18 and 39-45, and 1931-45 for Asia) as low values effect the GAM. After fitting the GAM, replace war values with real catch data for these year to translate catch into effort otherwise there will be no war effect on effort.    
 
@@ -139,11 +137,11 @@ toKeep<-sort(unique(effort$LME))
 effort_extrapolate<-function(toKeep, kappa, war_param, war_decision, reference){
   
   # # trial - def
-  # toKeep=2
-  # kappa=6
-  # war_param = "exclude"
+  # toKeep=40
+  # kappa=3
+  # war_param = "include"
   # war_decision = "no-add"
-  # reference = "1950"
+  # reference = "1945-1955"
 
   effort_extr<-effort %>% 
     filter(LME %in% toKeep) %>% 
@@ -199,11 +197,11 @@ effort_extrapolate<-function(toKeep, kappa, war_param, war_decision, reference){
   gam_model<-gam(eval(as.name(var)) ~ s(Year, k=kappa), data=df, family=gaussian(link="log"))
   df$gam<-round(predict(gam_model,newdata = df,type='response'))
 
-  # # check the gam
-  # ylim = c(min(df$gam), max(df$gam))
-  # plot(df$Year,df[[var]],  ylim=ylim)
-  # par(new=T)
-  # plot(df$Year,df$gam,col="red",type='l', ylim=ylim)
+  # check the gam
+  ylim = c(min(df$gam), max(df$gam))
+  plot(df$Year,df[[var]],  ylim=ylim)
+  par(new=T)
+  plot(df$Year,df$gam,col="red",type='l', ylim=ylim)
 
   # predict backwards
   newd <- data.frame(Year = seq(1850, maxVar$Year))
@@ -296,7 +294,10 @@ effort_extrapolate<-function(toKeep, kappa, war_param, war_decision, reference){
     
     # 1. add missing data 
     
-    # add back war time in raw catches
+    # add back war time in raw catches - only if you had excluded them above
+    # WARNING - CHECK THIS 
+    if(war_param == "exclude"){
+  
     if (year[[1]]<=1918 | year[[1]]<=1945){
       df<-df %>% 
       full_join(war %>% rename(var_war = as.name(var)), by = "Year")
@@ -306,15 +307,17 @@ effort_extrapolate<-function(toKeep, kappa, war_param, war_decision, reference){
           mutate(catch_tot = case_when(!is.na(var_war) ~ var_war,
                                        is.na(var_war) ~ eval(as.name(var)))) %>% 
           select(-var_war)
-      }else{ 
-        # is this needed? 
-        df<-df %>% 
-          mutate(NomActive = case_when(!is.na(var_war) ~ var_war,
-                                       is.na(var_war) ~ eval(as.name(var)))) %>% 
-          select(-var_war)
-        
       }
-      }
+      # }else{ 
+      #   # is this needed? was years are only excluded on catches, not effort. 
+      #   df<-df %>% 
+      #     mutate(NomActive = case_when(!is.na(var_war) ~ var_war,
+      #                                  is.na(var_war) ~ eval(as.name(var)))) %>% 
+      #     select(-var_war)
+      #   
+      # }
+    }
+    }
     
     # add back data after pick in both catches and effort
     if (dim(toAddBack)[1]!=0){
@@ -437,168 +440,183 @@ effort_extrapolate<-function(toKeep, kappa, war_param, war_decision, reference){
 
 ```{r extrapolate loop, fig.width=10, fig.height=7}
 
-# first loop ----
-# this is with war and ref at 1950 (this only applies to catches)
-
-reconstructed_effort_LME_war<-list()
-plot_reconstructed_effort_LME_war<-list()
-chechDataUsed<-list()
-
-# fix the k argument in GAM (based on war_param = "include" and reference = 1950)
-kappa_values<-data.frame(lme = toKeep, kappa = 6)
-kappa_values[c(5, 13,19, 31,56, 57, 61)+1, 2]<-5
-kappa_values[c(8)+1, 2]<-4
-
-for(i in 1:length(toKeep)){
-
-  print(toKeep[[i]]) 
-
-  # yes war data when fitting GAM do not re-add original data as otherwise you overwrite predictions
-  b<-effort_extrapolate(toKeep[[i]], kappa = kappa_values[i,2], war_param = "include", war_decision = "no-add", reference = "1950")
-
-  reconstructed_effort_LME_war[[i]]<-b$reconstructed_effort_LME
-  names(reconstructed_effort_LME_war)[i]<-toKeep[i]
-
-  plot_reconstructed_effort_LME_war[[i]]<-b$plot_reconstructed_effort_LME
-  names(plot_reconstructed_effort_LME_war)[i]<-toKeep[i]
-
-  chechDataUsed[[i]]<-b$chechDataUsed
-  names(chechDataUsed)[i]<-toKeep[i]
-  
-}
-
-# plot_reconstructed_effort_LME_war[[59]]
-
-# WARNINGS 
-
-# Warning message:
-# Step size truncated due to divergence
-# Warning messages:
-# 1: attributes are not identical across measure variables;
-# they will be dropped 
-
-# second loop ----
-# this is with alternatives but considering only the LME where calculations are based on catches 
-
-toKeepCatch<-as.numeric(names(chechDataUsed[chechDataUsed == "catch"]))
-
-reconstructed_effort_LME_catch<-list()
-plot_reconstructed_effort_LME_catch<-list()
-
-reconstructed_effort_LME_war_catch<-list()
-plot_reconstructed_effort_LME_war_catch<-list()
-
-reconstructed_effort_LME_war_original_catch<-list()
-plot_reconstructed_effort_LME_war_original_catch<-list()
-
-reconstructed_effort_LME_ref_catch<-list()
-plot_reconstructed_effort_LME_ref_catch<-list()
-
-for(i in 1:length(toKeepCatch)){
-  
-  print(toKeepCatch[[i]]) 
-  
-  # no war data when fitting GAM nor when calculating effort based on catch 
-  a<-effort_extrapolate(toKeepCatch[[i]], kappa = kappa_values[i,2], war_param = "exclude", war_decision = "no-add", reference = "1950")
-
-  reconstructed_effort_LME_catch[[i]]<-a$reconstructed_effort_LME
-  names(reconstructed_effort_LME_catch)[i]<-toKeepCatch[i]
-  
-  plot_reconstructed_effort_LME_catch[[i]]<-a$plot_reconstructed_effort_LME
-  names(plot_reconstructed_effort_LME_catch)[i]<-toKeepCatch[i]
-
-  # yes war data when fitting GAM do not re-add original data as otherwise you overwrite predictions
-  b<-effort_extrapolate(toKeepCatch[[i]], kappa = kappa_values[i,2], war_param = "include", war_decision = "no-add", reference = "1950")
-
-  reconstructed_effort_LME_war_catch[[i]]<-b$reconstructed_effort_LME
-  names(reconstructed_effort_LME_war_catch)[i]<-toKeepCatch[i]
-
-  plot_reconstructed_effort_LME_war_catch[[i]]<-b$plot_reconstructed_effort_LME
-  names(plot_reconstructed_effort_LME_war_catch)[i]<-toKeepCatch[i]
-
-  # no war data when fitting GAM, re-add original data when calcualting effort based on catch
-  c<-effort_extrapolate(toKeepCatch[[i]], kappa = kappa_values[i,2], war_param = "exclude", war_decision = "re-add",reference = "1950")
-
-  reconstructed_effort_LME_war_original_catch[[i]]<-c$reconstructed_effort_LME
-  names(reconstructed_effort_LME_war_original_catch)[i]<-toKeepCatch[i]
-
-  plot_reconstructed_effort_LME_war_original_catch[[i]]<-c$plot_reconstructed_effort_LME
-  names(plot_reconstructed_effort_LME_war_original_catch)[i]<-toKeepCatch[i]
-
-  # change the ref from 1950 to mean(1945-1955) to address higher bumps in effort than catches
-  d<-effort_extrapolate(toKeepCatch[[i]], kappa = kappa_values[i,2], war_param = "exclude", war_decision = "no-add", reference = "1945-1955")
-
-  reconstructed_effort_LME_ref_catch[[i]]<-d$reconstructed_effort_LME
-  names(reconstructed_effort_LME_ref_catch)[i]<-toKeepCatch[i]
-
-  plot_reconstructed_effort_LME_ref_catch[[i]]<-d$plot_reconstructed_effort_LME
-  names(plot_reconstructed_effort_LME_ref_catch)[i]<-toKeepCatch[i]
-  
-}
-
-# compare scenarios and decide ----
-
-# WAR decision
-combined_plot_war_list<-list()
-
-for(i in 1:length(plot_reconstructed_effort_LME_catch)){
-  
-  plot_reconstructed_effort_LME_catch[[i]]<-plot_reconstructed_effort_LME_catch[[i]]+
-    ggtitle(paste("LME", toKeepCatch[[i]], "no war", sep = " ")) +
-    theme(legend.position ="none")
-  
-  plot_reconstructed_effort_LME_war_catch[[i]]<-plot_reconstructed_effort_LME_war_catch[[i]]+
-    ggtitle(paste("LME", toKeepCatch[[i]], "war", sep = " ")) +
-    theme(legend.position ="none")
-  
-  plot_reconstructed_effort_LME_war_original_catch[[i]]<-plot_reconstructed_effort_LME_war_original_catch[[i]]+
-    ggtitle(paste("LME", toKeepCatch[[i]], "war original values", sep = " ")) +
-    theme(legend.position ="none")
-  
-  # better to combine plots like this otherwise 3 plots in 1 page are too big... 
-  combined_plot_war_list[[i]]<-list(plot_reconstructed_effort_LME_catch[[i]], plot_reconstructed_effort_LME_war_catch[[i]], plot_reconstructed_effort_LME_war_original_catch[[i]])
-  
-}
-
-combined_plot_war_list<-unlist(combined_plot_war_list, recursive=FALSE)
-
-pdf("Output/reconstructed_effort_for_spinup_totLME_warDecision2.pdf", height = 5, width = 7)
-for (i in 1:length(combined_plot_war_list)){
-  plot(combined_plot_war_list[[i]])
-}
-dev.off()
-
-# REFERENCE decision
-combined_plot_ref<-list()
-
-for(i in 1:length(plot_reconstructed_effort_LME_catch)){
-  
-  plot_reconstructed_effort_LME_ref_catch[[i]]<-plot_reconstructed_effort_LME_ref_catch[[i]]+
-    ggtitle(paste("LME", toKeep[[i]], "ref 1945-1955", sep = " "))+
-    theme(legend.position ="none")
-
-  combined_plot_ref[[i]]<-list(plot_reconstructed_effort_LME_catch[[i]], plot_reconstructed_effort_LME_ref_catch[[i]])
-  
-}
-
-combined_plot_ref<-unlist(combined_plot_ref, recursive=FALSE)
-
-pdf("Output/reconstructed_effort_for_spinup_totLME_refDecision2.pdf", height = 5, width = 7)
-for (i in 1:length(combined_plot_ref)){
-  plot(combined_plot_ref[[i]])
-}
-dev.off()
+# # first loop ----
+# # this is with war and ref at 1950 (this only applies to catches)
+# 
+# reconstructed_effort_LME_war<-list()
+# plot_reconstructed_effort_LME_war<-list()
+# chechDataUsed<-list()
+# 
+# # fix the k argument in GAM (based on war_param = "include" and reference = 1950)
+# kappa_values<-data.frame(lme = toKeep, kappa = 6)
+# kappa_values[c(5, 13,19, 31,56, 57, 61)+1, 2]<-5
+# kappa_values[c(8)+1, 2]<-4
+# 
+# for(i in 1:length(toKeep)){
+# 
+#   print(toKeep[[i]]) 
+# 
+#   # yes war data when fitting GAM do not re-add original data as otherwise you overwrite predictions
+#   b<-effort_extrapolate(toKeep[[i]], kappa = kappa_values[i,2], war_param = "include", war_decision = "no-add", reference = "1950")
+# 
+#   reconstructed_effort_LME_war[[i]]<-b$reconstructed_effort_LME
+#   names(reconstructed_effort_LME_war)[i]<-toKeep[i]
+# 
+#   plot_reconstructed_effort_LME_war[[i]]<-b$plot_reconstructed_effort_LME
+#   names(plot_reconstructed_effort_LME_war)[i]<-toKeep[i]
+# 
+#   chechDataUsed[[i]]<-b$chechDataUsed
+#   names(chechDataUsed)[i]<-toKeep[i]
+#   
+# }
+# 
+# # plot_reconstructed_effort_LME_war[[59]]
+# 
+# # WARNINGS 
+# 
+# # Warning message:
+# # Step size truncated due to divergence
+# # Warning messages:
+# # 1: attributes are not identical across measure variables;
+# # they will be dropped 
+# 
+# # second loop ----
+# # this is with alternatives but considering only the LME where calculations are based on catches 
+# 
+# toKeepCatch<-as.numeric(names(chechDataUsed[chechDataUsed == "catch"]))
+# 
+# reconstructed_effort_LME_catch<-list()
+# plot_reconstructed_effort_LME_catch<-list()
+# 
+# reconstructed_effort_LME_war_catch<-list()
+# plot_reconstructed_effort_LME_war_catch<-list()
+# 
+# reconstructed_effort_LME_war_original_catch<-list()
+# plot_reconstructed_effort_LME_war_original_catch<-list()
+# 
+# reconstructed_effort_LME_ref_catch<-list()
+# plot_reconstructed_effort_LME_ref_catch<-list()
+# 
+# for(i in 1:length(toKeepCatch)){
+#   
+#   print(toKeepCatch[[i]]) 
+#   
+#   # no war data when fitting GAM nor when calculating effort based on catch 
+#   a<-effort_extrapolate(toKeepCatch[[i]], kappa = kappa_values[i,2], war_param = "exclude", war_decision = "no-add", reference = "1950")
+# 
+#   reconstructed_effort_LME_catch[[i]]<-a$reconstructed_effort_LME
+#   names(reconstructed_effort_LME_catch)[i]<-toKeepCatch[i]
+#   
+#   plot_reconstructed_effort_LME_catch[[i]]<-a$plot_reconstructed_effort_LME
+#   names(plot_reconstructed_effort_LME_catch)[i]<-toKeepCatch[i]
+# 
+#   # yes war data when fitting GAM do not re-add original data as otherwise you overwrite predictions
+#   b<-effort_extrapolate(toKeepCatch[[i]], kappa = kappa_values[i,2], war_param = "include", war_decision = "no-add", reference = "1950")
+# 
+#   reconstructed_effort_LME_war_catch[[i]]<-b$reconstructed_effort_LME
+#   names(reconstructed_effort_LME_war_catch)[i]<-toKeepCatch[i]
+# 
+#   plot_reconstructed_effort_LME_war_catch[[i]]<-b$plot_reconstructed_effort_LME
+#   names(plot_reconstructed_effort_LME_war_catch)[i]<-toKeepCatch[i]
+# 
+#   # no war data when fitting GAM, re-add original data when calcualting effort based on catch
+#   c<-effort_extrapolate(toKeepCatch[[i]], kappa = kappa_values[i,2], war_param = "exclude", war_decision = "re-add",reference = "1950")
+# 
+#   reconstructed_effort_LME_war_original_catch[[i]]<-c$reconstructed_effort_LME
+#   names(reconstructed_effort_LME_war_original_catch)[i]<-toKeepCatch[i]
+# 
+#   plot_reconstructed_effort_LME_war_original_catch[[i]]<-c$plot_reconstructed_effort_LME
+#   names(plot_reconstructed_effort_LME_war_original_catch)[i]<-toKeepCatch[i]
+# 
+#   # change the ref from 1950 to mean(1945-1955) to address higher bumps in effort than catches
+#   d<-effort_extrapolate(toKeepCatch[[i]], kappa = kappa_values[i,2], war_param = "exclude", war_decision = "no-add", reference = "1945-1955")
+# 
+#   reconstructed_effort_LME_ref_catch[[i]]<-d$reconstructed_effort_LME
+#   names(reconstructed_effort_LME_ref_catch)[i]<-toKeepCatch[i]
+# 
+#   plot_reconstructed_effort_LME_ref_catch[[i]]<-d$plot_reconstructed_effort_LME
+#   names(plot_reconstructed_effort_LME_ref_catch)[i]<-toKeepCatch[i]
+#   
+# }
+# 
+# # compare scenarios and decide ----
+# 
+# # WAR decision
+# combined_plot_war_list<-list()
+# 
+# for(i in 1:length(plot_reconstructed_effort_LME_catch)){
+#   
+#   plot_reconstructed_effort_LME_catch[[i]]<-plot_reconstructed_effort_LME_catch[[i]]+
+#     ggtitle(paste("LME", toKeepCatch[[i]], "no war", sep = " ")) +
+#     theme(legend.position ="none")
+#   
+#   plot_reconstructed_effort_LME_war_catch[[i]]<-plot_reconstructed_effort_LME_war_catch[[i]]+
+#     ggtitle(paste("LME", toKeepCatch[[i]], "war", sep = " ")) +
+#     theme(legend.position ="none")
+#   
+#   plot_reconstructed_effort_LME_war_original_catch[[i]]<-plot_reconstructed_effort_LME_war_original_catch[[i]]+
+#     ggtitle(paste("LME", toKeepCatch[[i]], "war original values", sep = " ")) +
+#     theme(legend.position ="none")
+#   
+#   # better to combine plots like this otherwise 3 plots in 1 page are too big... 
+#   combined_plot_war_list[[i]]<-list(plot_reconstructed_effort_LME_catch[[i]], plot_reconstructed_effort_LME_war_catch[[i]], plot_reconstructed_effort_LME_war_original_catch[[i]])
+#   
+# }
+# 
+# combined_plot_war_list<-unlist(combined_plot_war_list, recursive=FALSE)
+# 
+# pdf("Output/reconstructed_effort_for_spinup_totLME_warDecision2.pdf", height = 5, width = 7)
+# for (i in 1:length(combined_plot_war_list)){
+#   plot(combined_plot_war_list[[i]])
+# }
+# dev.off()
+# 
+# # REFERENCE decision
+# combined_plot_ref<-list()
+# 
+# for(i in 1:length(plot_reconstructed_effort_LME_catch)){
+#   
+#   plot_reconstructed_effort_LME_ref_catch[[i]]<-plot_reconstructed_effort_LME_ref_catch[[i]]+
+#     ggtitle(paste("LME", toKeep[[i]], "ref 1945-1955", sep = " "))+
+#     theme(legend.position ="none")
+# 
+#   combined_plot_ref[[i]]<-list(plot_reconstructed_effort_LME_catch[[i]], plot_reconstructed_effort_LME_ref_catch[[i]])
+#   
+# }
+# 
+# combined_plot_ref<-unlist(combined_plot_ref, recursive=FALSE)
+# 
+# pdf("Output/reconstructed_effort_for_spinup_totLME_refDecision2.pdf", height = 5, width = 7)
+# for (i in 1:length(combined_plot_ref)){
+#   plot(combined_plot_ref[[i]])
+# }
+# dev.off()
 
 # final loop after DECISION ----
 
 # if catch: include war, ref 1945-1955
 # if effort - it does not matter
 
+# fix the k argument in GAM (based on war_param = "include" and reference = 1950)
+toKeep<-sort(unique(effort$LME))
+kappa_values<-data.frame(lme = toKeep, kappa = 6)
+kappa_values[c(5, 13,19, 31,56, 57, 61)+1, 2]<-5
+kappa_values[c(8)+1, 2]<-4
+
+# correct trends - Jerome comments
+# LME 40 not capturing slow increase in effort and resulting in high effort between 1850 and 1950, try playing with the smoothing parameter. 
+kappa_values[c(40)+1, 2]<-3 # 4 and 5 won't make a change # 3 works
+
+# LME 29 and 31 same as above - but I doubt this will change things as flat trend on the last years of data. 
+kappa_values[c(29)+1, 2]<-4 # 5 or 7 means increases # 4 works 
+kappa_values[c(31)+1, 2]<-5 # 5 works 
+
 reconstructed_effort_LME_war_ref<-list()
 plot_reconstructed_effort_LME_war_ref<-list()
 
 for(i in 1:length(toKeep)){
-  
+
+  # i = 41
   print(toKeep[[i]]) 
 
   # yes war data when fitting GAM do not re-add original data as otherwise you overwrite predictions, reference mean over a decade
@@ -613,14 +631,98 @@ for(i in 1:length(toKeep)){
 }
 
 # show north sea
-plot_reconstructed_effort_LME_war_ref[[22]]
+plot_reconstructed_effort_LME_war_ref[[23]]
+plot_reconstructed_effort_LME_war_ref[[27]]
+
+# adjust LME 64 where effort increases back in time - use decreases as per LME 65
+plot_reconstructed_effort_LME_war_ref[[65]] # the one need fixing 
+plot_reconstructed_effort_LME_war_ref[[66]]
+trial<-reconstructed_effort_LME_war_ref[[65]] # the one need fixing 
+trial1<-reconstructed_effort_LME_war_ref[[66]]
+
+# use the rate of change in trial1 to calculate trial (1850-1950)
+
+# 1B. calculate rate of change based on mean 1945-1955 years - line 225 + 243
+# df = trial1
+# consider only NomActive 
+ref<-trial1 %>% 
+  filter(Year >= 1945, Year <= 1955, 
+         Type == "NomActive")
+ref<-as.numeric(mean(ref$Value, na.rm = TRUE))
+
+# only for historical stuff.. 
+rate_of_change<-trial1 %>% 
+  filter(Year <= 1950, Type == "NomActive") %>% 
+  arrange(Year) %>% 
+  mutate(rate = 100 * (Value - ref)/ref) %>% 
+  mutate(Trial_back = ref + (rate/100)*ref) # only to check  
+
+# 2. extend effort back using rate of change in catch - line 251
+# 2B. extend effort back using rate of change in catch using decadal mean 
+# effort_extr = trial
+ref<-trial %>% 
+  filter(Year >= 1945, Year <=1955,
+         Type == "NomActive")
+ref<-as.numeric(mean(ref$Value, na.rm = TRUE))
+
+to_substitute<-trial %>% 
+  filter(Type == "NomActive", Year <= 1950) %>% 
+  full_join(select(rate_of_change, Year, rate)) %>% 
+  mutate(Value = ref + (rate/100)*ref) %>% 
+  select(-rate)
+
+trial2<-trial %>% 
+  filter(Year >= 1950, Type %in% c("NomActive", "catch_tot")) # keep only catch (no historical available) and effort. Predictions are wrong and should be the effort one 
+
+trial3<-trial2 %>% 
+  full_join(to_substitute)
+
+# Add back data 
+trial3<-trial3 %>% 
+  rename(Data = Type) %>% 
+  mutate(Data = ifelse(Data == "pred", "GAM predictions", "Reconstructed values"))
+
+# add predictions (from LME 65 and equal to effort)
+toAddPred<-trial3 %>% 
+  filter(Year <1950, group == "Effort (nominal, DkW)") %>% 
+  mutate(Data = "GAM predictions")
+
+trial3<- trial3 %>% 
+  full_join(toAddPred)
+
+trial3$Considered <- "No" # none of these numbers were considered as the projections are taken from LME 65
+
+# plot 
+yMax=max(filter(trial3, group == "Catch (tonnes)")$Value)
+ann_text <- data.frame(Year = c(1850+5,1950+2,1961+15,2010+5,1850+17), Value = c(rep(yMax,4),yMax-50), lab = c("Spin-up","Transition","Experiment", "Validation","*Predictions taken from LME 65"), group = rep("Catch (tonnes)", 5), Data = rep("Reconstructed values", 5), Considered = rep("Yes", 5))
+    
+plot<-ggplot(data = trial3, aes(x = Year, y = Value, group = Data, color = Data)) + # shape=Considered
+  ggtitle(paste("LME 64", sep = " "))+
+  facet_wrap(~group, scales = "free", nrow = 2)+
+  annotate("rect",xmin=1850, xmax=1950, ymin=0, ymax=Inf, fill = "#edf8fb", alpha = 0.4)+ # spin-up
+  annotate("rect",xmin=1950, xmax=1961, ymin=0, ymax=Inf, fill = "#b2e2e2", alpha = 0.4)+ # transition
+  annotate("rect",xmin=1961, xmax=2010, ymin=0, ymax=Inf, fill = "#66c2a4", alpha = 0.4)+ # projection
+  annotate("rect",xmin=2010, xmax=2017, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # validation
+  geom_text(data = ann_text,label = ann_text$lab, color = "Black", size = 2)+
+  geom_point(data = filter(trial3, Data == "Reconstructed values"),size=1)+
+  geom_line(data = filter(trial3, Data == "GAM predictions"))+
+  scale_color_manual(values = c("blue", "black"), drop = FALSE)+
+  scale_fill_chris()+
+  my_theme+
+  geom_vline(xintercept=1945, linetype="dashed", color = "red", size=0.5)+
+  geom_vline(xintercept=1955, linetype="dashed", color = "red", size=0.5)
+
+
+# prediction missing as coming from a different LME ... 
+reconstructed_effort_LME_war_ref[[65]]<-trial3
+plot_reconstructed_effort_LME_war_ref[[65]] <-plot
 
 # save and print plots ----
 
 # check empty LME and remove from the list - it should be none
 plot_reconstructed_effort_LME_war_ref<-plot_reconstructed_effort_LME_war_ref[lapply(plot_reconstructed_effort_LME_war_ref,length)>0]
 
-ggsave("Output/reconstructed_effort_for_spinup_totLME2.pdf", marrangeGrob(grobs = plot_reconstructed_effort_LME_war_ref, nrow=1, ncol=2), device = "pdf")
+ggsave("Output/reconstructed_effort_for_spinup_totLME2_JeromeComments.pdf", marrangeGrob(grobs = plot_reconstructed_effort_LME_war_ref, nrow=1, ncol=2), device = "pdf")
 
 ```
 
@@ -781,11 +883,11 @@ for(i in 1:length(plot_reconstructed_effort)){
   
 }
 
-pdf("Output/reconstructed_effort_for_spinup_refDecision.pdf", height = 5, width = 7)
-for (i in 1:length(combined_plot)){
-  plot(combined_plot[[i]])
-}
-dev.off()
+# pdf("Output/reconstructed_effort_for_spinup_refDecision.pdf", height = 5, width = 7)
+# for (i in 1:length(combined_plot)){
+#   plot(combined_plot[[i]])
+# }
+# dev.off()
 
 # Decision ----
 
@@ -795,14 +897,15 @@ dev.off()
 # plot_reconstructed_effort_ref
 
 # show North sea 
-plot_reconstructed_effort_ref[[22]]
+plot_reconstructed_effort_ref[[23]]
+plot_reconstructed_effort_ref[[27]]
 
 # save final data and plots ----
 
 # check empty LME and remove from the list - it should be none
 plot_reconstructed_effort_ref<-plot_reconstructed_effort_ref[lapply(plot_reconstructed_effort_ref,length)>0]
 
-ggsave("Output/reconstructed_effort_for_spinup.pdf", marrangeGrob(grobs = plot_reconstructed_effort_ref, nrow=1, ncol=2), device = "pdf")
+# ggsave("Output/reconstructed_effort_for_spinup.pdf", marrangeGrob(grobs = plot_reconstructed_effort_ref, nrow=1, ncol=2), device = "pdf")
 
 # save data
 reconstructed_effort_ref<-do.call(rbind.data.frame, reconstructed_effort_ref)
@@ -817,23 +920,27 @@ reconstructed_effort_ref<-reconstructed_effort_ref %>%
                             Year > 2010 ~ "validation"))
 
 
-yannick_dir <- "/rd/gem/private/users/yannickr"
-fwrite(x = reconstructed_effort_ref, file.path(yannick_dir, "effort_histsoc_1850_2010.csv")) # this is effort_histsoc_1850_2017.csv but before printing you need to make sure you are not overwriting any other file
+# yannick_dir <- "/rd/gem/private/users/yannickr"
+# fwrite(x = reconstructed_effort_ref, file.path(yannick_dir, "effort_histsoc_1850_2010.csv")) # this is effort_histsoc_1850_2017.csv but before printing you need to make sure you are not overwriting any other file
+
+
+
+# NOTES: 
+# Should it be a separate file from effort_histsoc_1961_2010.csv or should we combined the 2? Combined, done 
+# I used 1950 values for the reconstruction - should 1950-1961 be considered spin-up? yes - but more specifically transition, done 
+# I used effort to 2010 for the reconstruction - should I used all_effort_aggregated.csv or a version of this with effort data to 2017? Yes, done  
+# 
+# Decisions: 
+# 1. war, not war for GAM on catch? WAR
+# 2. ref year = 1950 or mean 1945-1955? 1945-1955
+# 3. ref year when allocating effort across groups 1950 or mean 1950-1960? 1950-1960
+# 
+# 1. N, P and GT were given as part of the original effort file but are not reconstructed so NA for spin-up. Delete these columns and maybe provide them as separate file, done
+# 2. Some reconstructions are based on very few effort values - See LME 6, 18 and 57 in particular. OK just need to specify in method description 
+# 3. For LME 64 effort is increasing by def. Use LME 66 and apply that rate of change. Find out which is Arctic and make sure taht LME is 0 untill 1950 - new fishery... TO DO 
+# 4. Spatial grid cell effort - should we reconstruct that too? if so, should we use the globla trend and allocate effort actoss cells based on effort 5. contribution in 1950 as done for the LME aggregated data? TO DO  
+# 6. catch data - which years should we provide? should we add a calibration/validation column? YES 
+# 7. Should we add the same column to the effort data? spin-up, transition, projection, validation? YES 
+
 ```
 
-NOTES: 
-Should it be a separate file from effort_histsoc_1961_2010.csv or should we combined the 2? Combined, done 
-I used 1950 values for the reconstruction - should 1950-1961 be considered spin-up? yes - but more specifically transition, done 
-I used effort to 2010 for the reconstruction - should I used all_effort_aggregated.csv or a version of this with effort data to 2017? Yes, done  
-
-Decisions: 
-1. war, not war for GAM on catch? WAR
-2. ref year = 1950 or mean 1945-1955? 1945-1955
-3. ref year when allocating effort across groups 1950 or mean 1950-1960? 1950-1960
-
-1. N, P and GT were given as part of the original effort file but are not reconstructed so NA for spin-up. Delete these columns and maybe provide them as separate file
-2. Some reconstructions are based on very few effort values - See LME 6, 18 and 57 in particular. OK just need to specify in method description 
-3. For LME 64 effort is increasing by def. Use LME 66 and apply that rate of change. Find out which is Arctic and make sure taht LME is 0 untill 1950 - new fishery... 
-4. Spatial grid cell effort - should we reconstruct that too? if so, should we use the globla trend and allocate effort actoss cells based on effort 5. contribution in 1950 as done for the LME aggregated data? 
-6. catch data - which years should we provide? should we add a calibration/validation column? YES 
-7. Should we add the same column to the effort data? spin-up, transition, projection, validation? YES 
